Ignore application/x-kde-onlyReplaceEmpty in paste dialog

BUG: 492006